--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
 
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+
+    <div class="results"></div>
+
+
 
     <script src = "./javascript.js"></script>
-
-
 </body>
 </html>
